[package]
name = "parachain-template"
description = "A parachain-template helper crate to keep documentation in sync with the template's components."
version = "0.0.0"
license = "Unlicense"
authors = [ "Sergey Gerodes <https://sergeygerodes.xyz>"]
homepage = "https://github.com/sgerodes/sg-parachain"
repository = "https://github.com/sgerodes/sg-parachain"
edition = "2021"
publish = false

[dependencies]
docify = { version = "0.2.9" }

[features]
generate-readme = []
