[package]
name = "sg-parachain"
description = "A parachain-template helper crate to keep documentation in sync with the template's components."
version = "0.0.0"
license = "Unlicense"
authors = [ "Sergey Gerodes <https://sergeygerodes.xyz>"]
homepage = "https://github.com/sgerodes/sg-parachain"
repository = "https://github.com/sgerodes/sg-parachain"
edition = "2021"
publish = false

[dependencies]
#parachain-node = { path = "./node" }

docify = { version = "0.2.9" }
clap = { version = "4.5.42", features = ["derive"] }
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
futures = { version = "0.3.31", features = ["thread-pool"] }
jsonrpsee = { version = "0.25.1" }
scale-info = { version = "2.11.6", default-features = false, features = ["derive", "serde"] }
serde_json = { version = "1.0.141", default-features = false, features = ["alloc"] }
color-print = { version = "0.3.4" }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.47.0", features = ["net", "rt", "rt-multi-thread", "macros", "time"] }

polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2506", default-features = false }
parachain-template-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2506"}
prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2506", default-features = true, package = "substrate-prometheus-endpoint" }


[features]
generate-readme = []
