[package]
name = "network_constants"
description = "description ..."
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]


[features]
default = ["std"]
std = []
